--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "emotion-theming": "^10.0.27",
     "firebase": "^7.19.1",
